fix alignment for mobile

--- a/src/views/ClientsList/ClientsList.scss
+++ b/src/views/ClientsList/ClientsList.scss
@@ -19,11 +19,3 @@ td {
 .avatar-list {
   height: 50px;
 }
-
-.clients-list {
-  padding-top: 20px;
-}
-.client-card {
-  border: 3px;
-  border-block-color: black;
-}
